@@ -1,5 +1,6 @@
 0.0.7
     - implement load_direct()
+    - test will success if MySQL is not installed.
 0.0.6
     - fix: data is not cleared when multi-column primary key is used
 0.0.5
